force-app/main/default/objects/DHKT_Student__c/fields/Activity_Class__c.field-meta.xml
<CustomField>
    <fullName>Activity_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity Class</label>
    <referenceTo>DHKT_Activity_Class__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>