force-app/main/default/objects/DHKT_Student__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>