force-app/main/default/objects/DHKT_Student__c/fields/Major__c.field-meta.xml
<CustomField>
    <fullName>Major__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Major</label>
    <referenceTo>DHKT_Major__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>