force-app/main/default/objects/DHKT_Student__c/validationRules/Validate_Phone_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Phone_Number</fullName>
    <active>true</active>
    <errorConditionFormula>!ISNUMBER( Phone_Number__c )</errorConditionFormula>
    <errorDisplayField>Phone_Number__c</errorDisplayField>
    <errorMessage>Please input valid phone number</errorMessage>
</ValidationRule>