force-app/main/default/objects/DHKT_Student__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>Faculty__c</columns>
    <columns>Activity_Class__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Phone_Number__c</columns>
    <columns>Email__c</columns>
    <columns>Date_of_Birth__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>